Homepage tabs alignment fix

--- a/sass/styles/header.scss
+++ b/sass/styles/header.scss
@@ -171,7 +171,7 @@ header {
 } //font-page-header
 .homepage-tabs-nav {
   width: 100%;
-  margin-top:-66px;
+  margin-top:-75px;
   @media all and (max-width: 770px) {
     margin-top:-49px;
         z-index:999999 !important;
