--- a/sass/styles/responsive.scss
+++ b/sass/styles/responsive.scss
@@ -436,7 +436,7 @@ a[href^="tel"] {
     }
 
     .homepage-tabs-nav {
-        margin-top:-70px;
+        margin-top:-75px;
         .tab_button {
             box-shadow: 0px 5px 16px -3px rgb(0 0 0 / 50%);
             -webkit-box-shadow: 0px 5px 16px -3px rgb(0 0 0 / 50%);
