--- a/styles.css
+++ b/styles.css
@@ -5509,7 +5509,7 @@ header input[type='text'] {
 }
 .homepage-tabs-nav {
   width: 100%;
-  margin-top: -66px;
+  margin-top: -75px;
 }
 @media (max-width: 770px) {
   .homepage-tabs-nav {
@@ -5676,7 +5676,7 @@ header input[type='text'] {
   transition: all 0.15s ease-out;
 }
 .partner-slider a.anglianlearning {
-  background-size: 900%;
+  background-size: 120%;
 }
 .partner-slider a:hover {
   background-size: 100%;
@@ -8775,7 +8775,7 @@ a[href^="tel"] {
     text-transform: uppercase;
   }
   .homepage-tabs-nav {
-    margin-top: -70px;
+    margin-top: -75px;
   }
   .homepage-tabs-nav .tab_button {
     box-shadow: 0px 5px 16px -3px rgba(0, 0, 0, 0.5);
